<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CatchThatJunkHome"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/ctjplum">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/pixelgamefont"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="141dp"
        android:layout_height="142dp"
        android:src="@drawable/trashbin"
        tools:ignore="ContentDescription" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">

        <TableRow
            android:gravity="center_vertical"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/carrot"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_carrot"
                android:fontFamily="@font/pixelgamefont"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                tools:ignore="RtlHardcoded,RtlSymmetry"/>
        </TableRow>

        <TableRow
            android:gravity="center_vertical"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/banana"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_banana"
                android:fontFamily="@font/pixelgamefont"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                tools:ignore="RtlHardcoded,RtlSymmetry"/>
        </TableRow>

        <TableRow
            android:gravity="center_vertical"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/leaves1"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_leaves1"
                android:fontFamily="@font/pixelgamefont"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                tools:ignore="RtlHardcoded,RtlSymmetry"/>
        </TableRow>

        <TableRow
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/battery"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_battery"
                android:fontFamily="@font/pixelgamefont"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                tools:ignore="RtlHardcoded,RtlSymmetry"/>
        </TableRow>

        <TableRow
            android:gravity="center_vertical"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/can"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_can"
                android:fontFamily="@font/pixelgamefont"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                tools:ignore="RtlHardcoded,RtlSymmetry"/>
        </TableRow>

    </TableLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startCTJ"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/ctjpink"
        android:text="@string/btn_Start"
        android:fontFamily="@font/pixelgamefont"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/ctjorange" />
</LinearLayout>