<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CatchThatJunk2Home"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/ctjplum"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/pixelgamefont"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="141dp"
        android:layout_height="142dp"
        android:src="@drawable/non_biodegradable"
        tools:ignore="ContentDescription" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TableRow
            android:gravity="center_vertical"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/plastic_bottle"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_carrot"
                android:fontFamily="@font/pixelgamefont"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                tools:ignore="RtlHardcoded,RtlSymmetry"/>
        </TableRow>

        <TableRow
            android:gravity="center_vertical"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/plastic_bag"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_banana"
                android:fontFamily="@font/pixelgamefont"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                tools:ignore="RtlHardcoded,RtlSymmetry"/>
        </TableRow>

        <TableRow
            android:gravity="center_vertical"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/paint_bucket"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_leaves1"
                android:fontFamily="@font/pixelgamefont"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                tools:ignore="RtlHardcoded,RtlSymmetry"/>
        </TableRow>

        <TableRow
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            >
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/poop"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_battery"
                android:fontFamily="@font/pixelgamefont"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                tools:ignore="RtlHardcoded,RtlSymmetry"/>
        </TableRow>

        <TableRow
            android:gravity="center_vertical"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/paper"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_can"
                android:fontFamily="@font/pixelgamefont"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                tools:ignore="RtlHardcoded,RtlSymmetry"/>
        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pixelgamefont"
        android:gravity="center"
        android:paddingTop="40dp"
        android:text="Reach 300 points to continue to Next Level"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startCTJ"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/ctjpink"
        android:text="@string/btn_Start"
        android:fontFamily="@font/pixelgamefont"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/ctjorange"
        android:background="@drawable/round_corner"/>
</LinearLayout>